improve hero  photos

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
         <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-          <div class="carousel-item">
-            <img src="assets/img/hero-carousel/fr1.jpg" alt="">
+          <div class="carousel-item active">
+            <img class="center-aligned" src="assets/img/hero-carousel/fr4.jpg" alt="">
             <div class="carousel-container">
               <h2>Franciane Rossone</h2>
               <h3>Cirurgia Plástica</h3>
@@ -100,20 +100,17 @@
           </div><!-- End Carousel Item -->
 
           <div class="carousel-item">
-            <img src="assets/img/hero-carousel/fr4.jpg" alt="">
+            <img class="top-aligned" src="assets/img/hero-carousel/fr1.jpg" alt="">
             <div class="carousel-container">
               <h2>Você na sua melhor versão</h2>
-              <h3>Nosso filosofia consiste em valorizar sua beleza, que é
-                <strong>única</strong>.
-              </h3>
               <a href="#" class="btn-get-started">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
 
-          <div class="carousel-item active">
-            <img src="assets/img/hero-carousel/fr7.jpg" alt="">
+          <div class="carousel-item">
+            <img class="top-aligned" src="assets/img/hero-carousel/fr7.jpg" alt="">
             <div class="carousel-container">
-              <h3>A forma que você se vê no espelho importa e <strong>você pode ser sua melhor versão</strong>.</h3>
+              <h2>A forma como você se vê no espelho é importante pra gente</h2>
               <a href="#" class="btn-get-started">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
@@ -637,7 +634,7 @@
 
             <div class="tab-pane fade active show" id="noncirurgicos-tab-1" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-12 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Bioestimuladores de colágeno</h3>
                   <p class="fst-italic">
                     São ativos injetados na camada mais profunda da pele para
@@ -668,7 +665,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-2" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Botox</h3>
                   <h5>Como ele age?</h5>
                   <p>A toxina botulínica age paralisando a musculatura da mímica
@@ -691,7 +688,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-3" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Preenchimento</h3>
                   <h5>Facial</h5>
                   <p>Os preenchimentos usados são a base de ácido hialurônico,
@@ -716,7 +713,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-4" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Fios</h3>
                   <p>
                     Existem hoje diversos tipos e modelos de fios. Os fios
@@ -734,7 +731,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-5" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-12 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Ultraformer</h3>
                   <p class="fst-italic">É um ultrassom micro e macrofocado, ou seja pode ser
                     utilizado em tratamentos faciais e corporais.
