--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="carousel-item active">
             <img class="center-aligned" src="assets/img/hero-carousel/fr4.jpg" alt="">
             <div class="carousel-container">
-              <h2>Franciane Rossone</h2>
+              <h2>Franciane&nbsp;Rossone</h2>
               <h3>Cirurgia Plástica</h3>
               <a href="#" class="btn-get-started">Consulta</a>
             </div>
@@ -110,7 +110,7 @@
           <div class="carousel-item">
             <img class="top-aligned" src="assets/img/hero-carousel/fr7.jpg" alt="">
             <div class="carousel-container">
-              <h2>A forma como você se vê no espelho é importante pra gente</h2>
+              <h2>A forma como você se vê no espelho importa</h2>
               <a href="#" class="btn-get-started">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
