change all colors and put photos on noncirurgicos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - franciane-rossone</title>
+    <title>Franciane Rossone - Cirurgia Plástica</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -143,8 +143,8 @@
               <img src="assets/img/fr5.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-              <h3>Franciane Rossone</h3>
-              <p class="fst-italic">
+              <h3 class="mt-3">Franciane Rossone</h3>
+              <p class="fst-italic mt-3">
                 Especialista em Cirurgia Plástica pela Sociedade Brasileira de
                 Cirurgia Plástica (SBCP).
               </p>
@@ -198,7 +198,7 @@
       </section><!-- /Consulta Section -->
 
       <!-- Clinica Section -->
-      <section id="clinica" class="clinica section accent-background">
+      <section id="clinica" class="clinica section">
 
         <div class="container">
           <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -223,7 +223,7 @@
           <span class="description-title">Cirurgias</span>
           <h2>Cirurgias</h2>
         </div><!-- End Section Title -->
-        <img src="./assets/img/fr6.jpg" alt=""> <br>
+        <img src="./assets/fr6.jpg" alt=""> <br>
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="row">
@@ -331,7 +331,7 @@
                       <h5>Para quem é indicado?</h5>
                       <p>O lifting facial é indicado para pacientes com mais de 40 anos
                         que apresentem sinais avançados de envelhecimento facial.
-                        Enquanto os procedimentos não- cirúrgicos são ideais para
+                        Enquanto os procedimentos não-cirúrgicos são ideais para
                         sinais leves e moderados de envelhecimento, o lifting é a
                         opção para transformações mais profundas.</p>
                       <h5>Onde fica a cicatriz?</h5>
@@ -634,7 +634,7 @@
 
             <div class="tab-pane fade active show" id="noncirurgicos-tab-1" role="tabpanel">
               <div class="row">
-                <div class="col-lg-12 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Bioestimuladores de colágeno</h3>
                   <p class="fst-italic">
                     São ativos injetados na camada mais profunda da pele para
@@ -660,12 +660,15 @@
                   <p>Os efeitos duram de 1-2 anos, podendo variar de acordo com o
                     princípio ativo do bioestimulador, idade e estilo de vida.</p>
                 </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center mt-3">
+                  <img src="assets/img/fr8.jpg" alt="" class="img-fluid">
+                </div>
               </div>
             </div><!-- End tab content item -->
 
             <div class="tab-pane fade" id="noncirurgicos-tab-2" role="tabpanel">
               <div class="row">
-                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Botox</h3>
                   <h5>Como ele age?</h5>
                   <p>A toxina botulínica age paralisando a musculatura da mímica
@@ -683,12 +686,15 @@
                   <h5>Qual a durabilidade?</h5>
                   <p>Até 4-6 meses.</p>
                 </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center mt-3">
+                  <img src="assets/img/fr9.jpg" alt="" class="img-fluid">
+                </div>
               </div>
             </div><!-- End tab content item -->
 
             <div class="tab-pane fade" id="noncirurgicos-tab-3" role="tabpanel">
               <div class="row">
-                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Preenchimento</h3>
                   <h5>Facial</h5>
                   <p>Os preenchimentos usados são a base de ácido hialurônico,
@@ -708,12 +714,15 @@
                     volumizando, empinando e corrigindo a depressão na lateral
                     do quadril.</p>
                 </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center mt-3">
+                  <img src="assets/img/fr4.jpg" alt="" class="img-fluid">
+                </div>
               </div>
             </div><!-- End tab content item -->
 
             <div class="tab-pane fade" id="noncirurgicos-tab-4" role="tabpanel">
               <div class="row">
-                <div class="col-lg-12 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Fios</h3>
                   <p>
                     Existem hoje diversos tipos e modelos de fios. Os fios
@@ -726,12 +735,15 @@
                   <ul>
                   </ul>
                 </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center mt-3">
+                  <img src="assets/img/fr10.jpg" alt="" class="img-fluid">
+                </div>
               </div>
             </div><!-- End tab content item -->
 
             <div class="tab-pane fade" id="noncirurgicos-tab-5" role="tabpanel">
               <div class="row">
-                <div class="col-lg-12 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Ultraformer</h3>
                   <p class="fst-italic">É um ultrassom micro e macrofocado, ou seja pode ser
                     utilizado em tratamentos faciais e corporais.
@@ -757,6 +769,9 @@
                     abdome, aspecto de umbigo triste, interno de coxas, por
                     exemplo. Além de ser útil em pequenas áreas com gordura
                     localizada.</p>
+                </div>
+                <div class="col-lg-6 order-1 order-lg-2 text-center mt-3">
+                  <img src="assets/img/fr7.jpg" alt="" class="img-fluid">
                 </div>
               </div>
             </div><!-- End tab content item -->
