change nav and body font

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Marcellus:wght@400&display=swap"
       rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/bw-vivant" rel="stylesheet">
+
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -471,125 +473,125 @@
                   </div>
                 </div>
               </div>
-                <div class="tab-content">
-                  <!-- Ginecomastia -->
-                  <div class="tab-pane" id="cirurgias-tab-8" role="tabpanel">
-                    <div class="row">
-                      <div class="col-lg-8 details order-2 order-lg-1">
-                        <h3>Ginecomastia</h3>
-                        <p class="fst-italic">A ginecomastia ocorre quando há um aumento do tecido mamário nos
-                          homens.
-                          Essa condição resulta de um desequilíbrio hormonal, sendo comum o surgimento na puberdade
-                          ou
-                          durante o envelhecimento. O uso de anabolizantes também pode desencadear o surgimento da
-                          ginecomastia.</p>
-                        <h5>Quando é preocupante?</h5>
-                        <p>Quando a ginecomastia ocorrer fora do período considerado fisiológico é importante
-                          investigar.
-                          Principalmente se estiver associada a dor intensa nas mamas, surgimento rápido e presença
-                          de
-                          secreção nos mamilos.</p>
-                        <h5>É ginecomastia ou lipomastia?</h5>
-                        <p>Homens com sobrepeso podem apresentar lipomastia, que é o acúmulo de gordura na região
-                          das
-                          mamas. Nesse caso, não há alteração no tecido mamário. O aumento das mamas desaparece
-                          quando
-                          ocorre perda de peso.</p>
-                      </div>
-                      <div class="col-lg-4 text-center order-1 order-lg-2">
-                        <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
-                      </div>
+              <div class="tab-content">
+                <!-- Ginecomastia -->
+                <div class="tab-pane" id="cirurgias-tab-8" role="tabpanel">
+                  <div class="row">
+                    <div class="col-lg-8 details order-2 order-lg-1">
+                      <h3>Ginecomastia</h3>
+                      <p class="fst-italic">A ginecomastia ocorre quando há um aumento do tecido mamário nos
+                        homens.
+                        Essa condição resulta de um desequilíbrio hormonal, sendo comum o surgimento na puberdade
+                        ou
+                        durante o envelhecimento. O uso de anabolizantes também pode desencadear o surgimento da
+                        ginecomastia.</p>
+                      <h5>Quando é preocupante?</h5>
+                      <p>Quando a ginecomastia ocorrer fora do período considerado fisiológico é importante
+                        investigar.
+                        Principalmente se estiver associada a dor intensa nas mamas, surgimento rápido e presença
+                        de
+                        secreção nos mamilos.</p>
+                      <h5>É ginecomastia ou lipomastia?</h5>
+                      <p>Homens com sobrepeso podem apresentar lipomastia, que é o acúmulo de gordura na região
+                        das
+                        mamas. Nesse caso, não há alteração no tecido mamário. O aumento das mamas desaparece
+                        quando
+                        ocorre perda de peso.</p>
+                    </div>
+                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                      <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
+                </div>
 
-                  <!-- Otoplastia -->
-                  <div class="tab-pane" id="cirurgias-tab-9" role="tabpanel">
-                    <div class="row">
-                      <div class="col-lg-8 details order-2 order-lg-1">
-                        <h3>Otoplastia</h3>
-                        <p class="fst-italic">A cirurgia de otoplastia corrige as deformidades das orelhas, sendo a
-                          correção das orelhas proeminentes (mais conhecidas como orelhas de abano) a mais comum.
-                        </p>
-                        <p>Ela pode ser realizada após os 7 anos, idade na qual o desenvolvimento da orelha está
-                          completo
-                          e a cirurgia não vai interferir nesse aspecto. A incisão cirúrgica é feita em local
-                          discreto,
-                          atrás da orelha.</p>
-                      </div>
-                      <div class="col-lg-4 text-center order-1 order-lg-2">
-                        <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
-                      </div>
+                <!-- Otoplastia -->
+                <div class="tab-pane" id="cirurgias-tab-9" role="tabpanel">
+                  <div class="row">
+                    <div class="col-lg-8 details order-2 order-lg-1">
+                      <h3>Otoplastia</h3>
+                      <p class="fst-italic">A cirurgia de otoplastia corrige as deformidades das orelhas, sendo a
+                        correção das orelhas proeminentes (mais conhecidas como orelhas de abano) a mais comum.
+                      </p>
+                      <p>Ela pode ser realizada após os 7 anos, idade na qual o desenvolvimento da orelha está
+                        completo
+                        e a cirurgia não vai interferir nesse aspecto. A incisão cirúrgica é feita em local
+                        discreto,
+                        atrás da orelha.</p>
+                    </div>
+                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                      <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
+                </div>
 
-                  <!-- Blefaroplastia -->
-                  <div class="tab-pane" id="cirurgias-tab-10" role="tabpanel">
-                    <div class="row">
-                      <div class="col-lg-8 details order-2 order-lg-1">
-                        <h3>Blefaroplastia</h3>
-                        <p class="fst-italic">Com o envelhecimento é comum o surgimento de flacidez de pele nas
-                          pálpebras
-                          e em alguns casos as bolsas abaixo dos olhos também se tornam aparentes.</p>
-                        <p>Essa cirurgia visa remover o excesso de pele e gordura das pálpebras superiores e
-                          inferiores, o
-                          que melhora a aparência da região periocular, o aspecto cansado dos olhos e aprimora o
-                          campo
-                          visual.</p>
-                      </div>
-                      <div class="col-lg-4 text-center order-1 order-lg-2">
-                        <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
-                      </div>
+                <!-- Blefaroplastia -->
+                <div class="tab-pane" id="cirurgias-tab-10" role="tabpanel">
+                  <div class="row">
+                    <div class="col-lg-8 details order-2 order-lg-1">
+                      <h3>Blefaroplastia</h3>
+                      <p class="fst-italic">Com o envelhecimento é comum o surgimento de flacidez de pele nas
+                        pálpebras
+                        e em alguns casos as bolsas abaixo dos olhos também se tornam aparentes.</p>
+                      <p>Essa cirurgia visa remover o excesso de pele e gordura das pálpebras superiores e
+                        inferiores, o
+                        que melhora a aparência da região periocular, o aspecto cansado dos olhos e aprimora o
+                        campo
+                        visual.</p>
+                    </div>
+                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                      <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
+                </div>
 
-                  <!-- Lifting de Coxas -->
-                  <div class="tab-pane" id="cirurgias-tab-11" role="tabpanel">
-                    <div class="row">
-                      <div class="col-lg-8 details order-2 order-lg-1">
-                        <h3>Lifting de Coxas</h3>
-                        <p class="fst-italic">Pacientes que passaram por perda ponderal importante após mudança no
-                          estilo
-                          de vida ou cirurgia bariátrica geralmente apresentam excesso de pele na região das coxas,
-                          que
-                          geram incômodo além da estética.</p>
-                        <p>O lifting de coxas remodela a região, reduzindo o excesso de pele e, em alguns casos, a
-                          gordura.</p>
-                      </div>
-                      <div class="col-lg-4 text-center order-1 order-lg-2">
-                        <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
-                      </div>
+                <!-- Lifting de Coxas -->
+                <div class="tab-pane" id="cirurgias-tab-11" role="tabpanel">
+                  <div class="row">
+                    <div class="col-lg-8 details order-2 order-lg-1">
+                      <h3>Lifting de Coxas</h3>
+                      <p class="fst-italic">Pacientes que passaram por perda ponderal importante após mudança no
+                        estilo
+                        de vida ou cirurgia bariátrica geralmente apresentam excesso de pele na região das coxas,
+                        que
+                        geram incômodo além da estética.</p>
+                      <p>O lifting de coxas remodela a região, reduzindo o excesso de pele e, em alguns casos, a
+                        gordura.</p>
+                    </div>
+                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                      <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
+                </div>
 
-                  <!-- Lifting de Braços -->
-                  <div class="tab-pane" id="cirurgias-tab-12" role="tabpanel">
-                    <div class="row">
-                      <div class="col-lg-8 details order-2 order-lg-1">
-                        <h3>Lifting de Braços</h3>
-                        <p class="fst-italic">Lifting de braços ou braquioplastia é a cirurgia indicada para
-                          corrigir a
-                          flacidez acentuada na região dos braços.</p>
-                        <p>A flacidez surge devido a oscilação de peso, perda ponderal após dieta ou cirurgia
-                          bariátrica,
-                          ou simplesmente por predisposição genética.</p>
-                        <h5>Todo paciente com flacidez nos braços tem indicação cirúrgica?</h5>
-                        <p>Não. Pacientes com flacidez leve a moderada têm indicação de procedimentos
-                          não-cirúrgicos. A
-                          braquioplastia é reservada ao paciente com flacidez acentuada, na qual outros tratamentos
-                          não
-                          apresentariam resultado satisfatório.</p>
-                      </div>
-                      <div class="col-lg-4 text-center order-1 order-lg-2">
-                        <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
-                      </div>
+                <!-- Lifting de Braços -->
+                <div class="tab-pane" id="cirurgias-tab-12" role="tabpanel">
+                  <div class="row">
+                    <div class="col-lg-8 details order-2 order-lg-1">
+                      <h3>Lifting de Braços</h3>
+                      <p class="fst-italic">Lifting de braços ou braquioplastia é a cirurgia indicada para
+                        corrigir a
+                        flacidez acentuada na região dos braços.</p>
+                      <p>A flacidez surge devido a oscilação de peso, perda ponderal após dieta ou cirurgia
+                        bariátrica,
+                        ou simplesmente por predisposição genética.</p>
+                      <h5>Todo paciente com flacidez nos braços tem indicação cirúrgica?</h5>
+                      <p>Não. Pacientes com flacidez leve a moderada têm indicação de procedimentos
+                        não-cirúrgicos. A
+                        braquioplastia é reservada ao paciente com flacidez acentuada, na qual outros tratamentos
+                        não
+                        apresentariam resultado satisfatório.</p>
+                    </div>
+                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                      <img src="./assets/img/fr6.jpg" alt="" class="img-fluid mb-3">
                     </div>
                   </div>
                 </div>
               </div>
-
             </div>
 
           </div>
+
+        </div>
         </div>
         </div>
 
