--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Marcellus:wght@400&display=swap"
       rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/bw-vivant" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/kiona-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/source-sans-pro" rel="stylesheet">
 
 
     <!-- Vendor CSS Files -->
@@ -97,7 +97,7 @@
             <img class="center-aligned" src="assets/img/hero-carousel/fr4.jpg" alt="">
             <div class="carousel-container">
               <h2>Franciane&nbsp;Rossone</h2>
-              <h3>Cirurgia Plástica</h3>
+              <h3 class="subtitulo">Cirurgia Plástica</h3>
               <a href="#" class="btn-get-started">Consulta</a>
             </div>
           </div><!-- End Carousel Item -->
@@ -876,7 +876,7 @@
     <footer id="footer" class="footer position-relative accent-background">
       <div class="container">
         <h3 class="sitename">Franciane Rossone</h3>
-        <p>Cirurgia Plástica</p>
+        <p class="subtitulo">Cirurgia Plástica</p>
         <div class="social-links d-flex justify-content-center">
           <a href=""><i class="bi bi-twitter-x"></i></a>
           <a href=""><i class="bi bi-facebook"></i></a>
