change copyright style

--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
           </div>
           <div class="credits">
             Desenvolvido por
-            <a href="https://www.cassiaqueirozcodelab.com.br/" style="color: white; font-weight: bold;"
+            <a href="https://www.cassiaqueirozcodelab.com.br/" style="color: white; font-weight: 500;"
               onmouseover="this.style.fontWeight='normal'; this.style.color='white';"
               onmouseout="this.style.fontWeight='bold'; this.style.color='white';"
               onfocus="this.style.fontWeight='normal'; this.style.color='white';"
