change copyright style

--- a/index.html
+++ b/index.html
@@ -895,8 +895,7 @@
               onmouseout="this.style.fontWeight='bold'; this.style.color='white';"
               onfocus="this.style.fontWeight='normal'; this.style.color='white';"
               onblur="this.style.fontWeight='bold'; this.style.color='white';">
-              cassiaqueirozcodelab
-            </a>.
+              cassiaqueirozcodelab</a>.
           </div>
 
         </div>
