--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Lipoaspiração/ Lipoescultura</h3>
-                      <p class="">Lipoaspiração tem o objetivo de melhorar o contorno corporal.
+                      <p class="fst-italic">Lipoaspiração tem o objetivo de melhorar o contorno corporal.
                         É indicada para pacientes que já estão no peso ideal e desejam
 
                         eliminar gorduras localizadas. Não deve ser encarada como
@@ -315,7 +315,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Lifting facial</h3>
-                      <p class="">Indicado para pacientes que apresentam sinais avançados de
+                      <p class="fst-italic">Indicado para pacientes que apresentam sinais avançados de
                         envelhecimento.</p>
 
                       <ul>
@@ -348,7 +348,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Abdominoplastia</h3>
-                      <p class="">Em alguns casos, as mulheres que já tiveram filhos
+                      <p class="fst-italic">Em alguns casos, as mulheres que já tiveram filhos
                         apresentam fraqueza na musculatura do abdome e flacidez de
                         pele importante.
                         A abdominoplastia é o procedimento indicado para remover o
@@ -378,7 +378,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Mini abdominoplastia</h3>
-                      <p class="">Essa cirurgia é indicada para pacientes com flacidez de pele
+                      <p class="fst-italic">Essa cirurgia é indicada para pacientes com flacidez de pele
                         somente abaixo do umbigo e umbigo com posição mais alta no
                         abdome.</p>
                       <h5>Qual a diferença em relação a abdominoplastia tradicional?</h5>
@@ -397,7 +397,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Mamoplastia redutora</h3>
-                      <p class="">As mamas muito volumosas representam um verdadeiro
+                      <p class="fst-italic">As mamas muito volumosas representam um verdadeiro
                         incômodo. As mulheres têm dificuldade na hora de comprar
                         roupas, dores nas costas, alteração na postura, peso excessivo
                         na prática de atividades aeróbicas, assaduras entre outros.</p>
@@ -420,7 +420,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Mastopexia</h3>
-                      <p class="">Cirurgia indicada para corrigir a flacidez e queda das mamas.</p>
+                      <p class="fst-italic">Cirurgia indicada para corrigir a flacidez e queda das mamas.</p>
                       <p>Nessa cirurgia existem várias possibilidades de cicatriz:</p>
                       <ul>
                         <li>ao redor da aréola;</li>
@@ -446,7 +446,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Mamoplastia de aumento</h3>
-                      <p class="">A mamoplastia de aumento é indicada para pacientes que possuem mamas
+                      <p class="fst-italic">A mamoplastia de aumento é indicada para pacientes que possuem mamas
                         pequenas,
                         desproporcionais ao corpo ou que perderam volume devido à perda de peso, gravidez ou
                         amamentação.
@@ -478,7 +478,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Ginecomastia</h3>
-                      <p class="">A ginecomastia ocorre quando há um aumento do tecido mamário nos
+                      <p class="fst-italic">A ginecomastia ocorre quando há um aumento do tecido mamário nos
                         homens.
                         Essa condição resulta de um desequilíbrio hormonal, sendo comum o surgimento na puberdade
                         ou
@@ -508,7 +508,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Otoplastia</h3>
-                      <p class="">A cirurgia de otoplastia corrige as deformidades das orelhas, sendo a
+                      <p class="fst-italic">A cirurgia de otoplastia corrige as deformidades das orelhas, sendo a
                         correção das orelhas proeminentes (mais conhecidas como orelhas de abano) a mais comum.
                       </p>
                       <p>Ela pode ser realizada após os 7 anos, idade na qual o desenvolvimento da orelha está
@@ -528,7 +528,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Blefaroplastia</h3>
-                      <p class="">Com o envelhecimento é comum o surgimento de flacidez de pele nas
+                      <p class="fst-italic">Com o envelhecimento é comum o surgimento de flacidez de pele nas
                         pálpebras
                         e em alguns casos as bolsas abaixo dos olhos também se tornam aparentes.</p>
                       <p>Essa cirurgia visa remover o excesso de pele e gordura das pálpebras superiores e
@@ -548,7 +548,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Lifting de Coxas</h3>
-                      <p class="">Pacientes que passaram por perda ponderal importante após mudança no
+                      <p class="fst-italic">Pacientes que passaram por perda ponderal importante após mudança no
                         estilo
                         de vida ou cirurgia bariátrica geralmente apresentam excesso de pele na região das coxas,
                         que
@@ -567,7 +567,7 @@
                   <div class="row">
                     <div class="col-lg-8 details order-2 order-lg-1">
                       <h3>Lifting de Braços</h3>
-                      <p class="">Lifting de braços ou braquioplastia é a cirurgia indicada para
+                      <p class="fst-italic">Lifting de braços ou braquioplastia é a cirurgia indicada para
                         corrigir a
                         flacidez acentuada na região dos braços.</p>
                       <p>A flacidez surge devido a oscilação de peso, perda ponderal após dieta ou cirurgia
@@ -654,7 +654,7 @@
               <div class="row">
                 <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Bioestimuladores de colágeno</h3>
-                  <p class="">
+                  <p class="fst-italic">
                     São ativos injetados na camada mais profunda da pele para
                     estimular a produção de colágeno.
                   </p>
@@ -763,7 +763,7 @@
               <div class="row">
                 <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Ultraformer</h3>
-                  <p class="">É um ultrassom micro e macrofocado, ou seja pode ser
+                  <p class="fst-italic">É um ultrassom micro e macrofocado, ou seja pode ser
                     utilizado em tratamentos faciais e corporais.
                     Ele tem o potencial de atuar em profundidades diferentes, na
                     derme profunda, estimulando a produção de colágeno, na
