change credits and topbar style

--- a/index.html
+++ b/index.html
@@ -888,11 +888,11 @@
           </div>
           <div class="credits">
             Desenvolvido por
-            <a href="https://www.cassiaqueirozcodelab.com.br/" style="color: white; font-weight: bold;"
-              onmouseover="this.style.fontWeight='normal'; this.style.color='white';"
-              onmouseout="this.style.fontWeight='bold'; this.style.color='white';"
-              onfocus="this.style.fontWeight='normal'; this.style.color='white';"
-              onblur="this.style.fontWeight='bold'; this.style.color='white';">
+            <a href="https://www.cassiaqueirozcodelab.com.br/" style="color: white; border-bottom: 1px solid rgba(255, 255, 255, 0.5);"
+              onmouseover="this.style.borderBottom='none';"
+              onmouseout="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.5)';"
+              onfocus="this.style.borderBottom='none';"
+              onblur="this.style.borderBottom='1px solid rgba(255, 255, 255, 0.5)';">
               cassiaqueirozcodelab</a>.
           </div>
 
