change font, accent color and correct non section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="topbar d-flex align-items-center dark-background">
         <div class="container d-flex justify-content-center justify-content-md-between">
           <div class="contact-info d-flex align-items-center">
-            <i class="bi bi-phone d-flex align-items-center ms-4"><span>(21) 9 9787-6788</span></i>
+            <i class="bi bi-phone d-flex align-items-center ms-4"><span> (21) 9 9508-8934</span></i>
           </div>
           <div class="social-links d-none d-md-flex align-items-center">
             <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
@@ -686,7 +686,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-2" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Botox</h3>
                   <h5>Como ele age?</h5>
                   <p>A toxina botulínica age paralisando a musculatura da mímica
@@ -712,7 +712,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-3" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Preenchimento</h3>
                   <h5>Facial</h5>
                   <p>Os preenchimentos usados são a base de ácido hialurônico,
@@ -740,7 +740,7 @@
 
             <div class="tab-pane fade" id="noncirurgicos-tab-4" role="tabpanel">
               <div class="row">
-                <div class="col-lg-6 ord12r-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                   <h3>Fios</h3>
                   <p>
                     Existem hoje diversos tipos e modelos de fios. Os fios
@@ -847,7 +847,7 @@
                     data-aos-delay="300">
                     <i class="bi bi-telephone"></i>
                     <h3>Telefone</h3>
-                    <p>(21) 9 9787-6788</p>
+                    <p>(21) 9 9508-8934</p>
                   </div>
                 </div><!-- End Info Item -->
 
